# DocuBench

./: .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  docubench-explorer.html  pyproject.toml
.github/workflows/: ci.yml
docs/: dataset-card.md  limitations.md  scoring.md  submissions.md
docubench/: __init__.py  cli.py
plans/codex1/: improve_polish.md
prompts/: README.md  claude.md  docupipe.md  extend.md  extraction_prompt.txt  gemini.md  gpt.md
results/: summary.csv  summary.json
results/claude/: 1ZVqiyJZ.json  45xidifn.json  4kVtTRoL.json  5YJaBbNg.json  5ukZftw0.json  62PhJTyf.json  7ZhgzAzp.json  97uZroyv.json  B0nA2c30.json  BnftpXVQ.json  C7fe2lau.json  DtfW60lS.json  ENoM9faK.json  Eet2wW3x.json  FiFgt4a6.json  GW7i2xbM.json  IPm0MkgQ.json  J6buHXQ4.json  KpewWz3R.json  LYeb3G3s.json  M66HZlWT.json  NNaGgwE5.json  NlWTPen5.json  OayFbGlG.json  Oe7iRM1G.json  PSU5pciM.json  PYhFptk3.json  QxoQ6zgn.json  SBR9L7Y8.json  SkD8Lz8o.json  UnG6cLfP.json  WnxX1Buq.json  WxP8Tqgf.json  XhJyv5mb.json  ZN6HbuKp.json  ZXlksSpk.json  bjBNmyNw.json  eKzY7gEA.json  iTruRDrG.json  jlKc8eVi.json  (+10 more)
results/gemini/: 1ZVqiyJZ.json  45xidifn.json  4kVtTRoL.json  5YJaBbNg.json  5ukZftw0.json  62PhJTyf.json  7ZhgzAzp.json  97uZroyv.json  B0nA2c30.json  BnftpXVQ.json  C7fe2lau.json  DtfW60lS.json  ENoM9faK.json  Eet2wW3x.json  FiFgt4a6.json  (+35 more)
scripts/: run_all.py  run_claude.py  run_gemini.py  run_gpt.py  score_all.py
space/: README.md  app.py  build_data.py  leaderboard.json  requirements.txt
tests/: test_cli.py  test_run_gpt.py  test_scorer.py  test_space.py
(+50 files in other folders)
