[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "docubench"
version = "0.1.0"
description = "A public benchmark for schema-guided structured extraction from real-world documents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "pillow>=10",
  "requests>=2.31"
]
authors = [
  { name = "DocuBench maintainers" }
]
keywords = [
  "benchmark",
  "document extraction",
  "structured extraction",
  "json schema",
  "ocr",
  "document ai"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.optional-dependencies]
dev = [
  "pytest>=8"
]

[project.scripts]
docubench = "docubench.cli:main"

[tool.setuptools]
packages = ["docubench"]
py-modules = ["scorer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
